# bambutui

./: .gitignore  CLAUDE.md  README.md  install.sh  pyproject.toml  requirements.txt
bambutui/: __main__.py  app.py  bambutui.tcss  camera.py  config.py
bambutui/printer/: commands.py  ftp_client.py  mqtt_client.py  state.py
bambutui/screens/: camera.py  control.py  dashboard.py  files.py  setup.py
bambutui/widgets/: camera_view.py  progress_bar.py  status_bar.py  temp_display.py
